--- a/r-package/NAMESPACE
+++ b/r-package/NAMESPACE
@@ -5,3 +5,4 @@ export(querychat_server)
 export(querychat_sidebar)
 export(querychat_system_prompt)
 export(querychat_ui)
+importFrom(promises,"%...>%")
